All Fragment Views are now active through the canvas view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="right">RIGHT</string>
     <string name="top">TOP</string>
     <string name="bottom">BOTTOM</string>
+    <string name="none">NONE</string>
 
     <!-- Color String Keys -->
 
