Added preliminary animation sequence for life over and added game button for starting game and re-starting level

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="top">TOP</string>
     <string name="bottom">BOTTOM</string>
     <string name="none">NONE</string>
+    <string name="start">START</string>
 
     <!-- Color String Keys -->
 
