Changed power up button to change color button and added logic for pausing the game when the game fragment leaves the front of the stack (onPause)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="none">NONE</string>
     <string name="start">START</string>
     <string name="resume">RESUME</string>
+    <string name="change_color">CHANGE COLOR</string>
 
     <!-- Color String Keys -->
 
