Added the options dialog to the main fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="start">START</string>
     <string name="resume">RESUME</string>
     <string name="change_color">CHANGE COLOR</string>
+    <string name="options">Options</string>
 
     <!-- Color String Keys -->
 
