Added cosmetics for difficulty levels on dialog and added new difficulty colors

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,12 @@
     <string name="sound_status">SOUND_STATUS</string>
     <string name="sound_on">SOUND_ON</string>
     <string name="sound_off">SOUND_OFF</string>
+
+    <string name="difficulty_status">DIIFICULTY_STATUS</string>
+    <string name="diffiiculty_easy">DIFFICULTY_EASY</string>
+    <string name="difficulty_medium">DIFFICULTY_MEDIUM</string>
+    <string name="difficulty_hard">DIFFICULTY_HARD</string>
+
     <!-- -->
 
     <!-- Color String Keys -->
