--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
     <string name="sound_off">SOUND_OFF</string>
 
     <string name="difficulty_status">DIIFICULTY_STATUS</string>
-    <string name="diffiiculty_easy">DIFFICULTY_EASY</string>
+    <string name="difficulty_easy">DIFFICULTY_EASY</string>
     <string name="difficulty_medium">DIFFICULTY_MEDIUM</string>
     <string name="difficulty_hard">DIFFICULTY_HARD</string>
 
